# cmd/docs/swagger.json
@@ -4,27 +4,31 @@
         "contact": {}
     },
     "paths": {
-        "/todos": {
-            "get": {
-                "description": "Get all todos",
+        "/login": {
+            "post": {
+                "description": "This is a simple task list API",
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "todos"
+                "responses": {}
+            }
+        },
+        "/register": {
+            "post": {
+                "description": "This is a simple task list API",
+                "produces": [
+                    "application/json"
                 ],
-                "summary": "Get all todos",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Todo"
-                            }
-                        }
-                    }
-                }
+                "responses": {}
+            }
+        },
+        "/todos": {
+            "get": {
+                "description": "This is a simple task list API",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {}
             },
             "put": {
                 "description": "This is a simple task list API",
@@ -34,291 +38,43 @@
                 "responses": {}
             },
             "post": {
-                "description": "Create a new todo",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "This is a simple task list API",
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Create a new todo",
-                "parameters": [
-                    {
-                        "description": "Todo object",
-                        "name": "todo",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Todo"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Todo"
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/todos/complete": {
             "put": {
-                "description": "Complete all todos",
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Complete all todos",
-                "responses": {
-                    "200": {
-                        "description": "All todos completed successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/todos/completed": {
-            "get": {
-                "description": "Get all completed todos",
+                "description": "This is a simple task list API",
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Get all completed todos",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.Todo"
-                            }
-                        }
-                    }
-                }
+                "responses": {}
             }
         },
         "/todos/{id}": {
             "get": {
-                "description": "Get todo by ID",
+                "description": "This is a simple task list API",
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Get todo by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Todo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Todo"
-                        }
-                    }
-                }
+                "responses": {}
             },
             "put": {
-                "description": "Update a todo by ID",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "This is a simple task list API",
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Update a todo by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Todo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Todo object",
-                        "name": "todo",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Todo"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.Todo"
-                        }
-                    }
-                }
+                "responses": {}
             },
             "delete": {
-                "description": "Delete todo by ID",
-                "produces": [
-                    "text/plain"
-                ],
-                "tags": [
-                    "todos"
-                ],
-                "summary": "Delete todo by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Todo ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Todo deleted successfully",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/users": {
-            "get": {
-                "description": "Get all users",
+                "description": "This is a simple task list API",
                 "produces": [
                     "application/json"
                 ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get all users",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/models.User"
-                            }
-                        }
-                    }
-                }
-            },
-            "post": {
-                "description": "Create a new user",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Create a new user",
-                "parameters": [
-                    {
-                        "description": "User object",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                }
-            }
-        },
-        "/users/{id}": {
-            "get": {
-                "description": "Get user by ID",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Get user by ID",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                }
-            }
-        }
-    },
-    "definitions": {
-        "models.Todo": {
-            "type": "object",
-            "properties": {
-                "completed": {
-                    "type": "boolean"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.User": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "string"
-                },
-                "password:required": {
-                    "type": "string"
-                },
-                "username:unique:required": {
-                    "type": "string"
-                }
+                "responses": {}
             }
         }
     }
